src/test/ui/parser/issue-27255.stderr
error: missing `for` in a trait impl
  --> $DIR/issue-27255.rs:3:7
   |
LL | impl A .. {} //~ ERROR
   |       ^

error: aborting due to previous error

