src/test/ui/parser/issue-27255.rs
// compile-flags: -Z parse-only

impl A .. {} //~ ERROR

fn main() {}
